# tt-wavelet

./: .clang-format  .clang-tidy  .clang-tidy-light  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMAKE_FABRIC.txt  CMAKE_SCALEOUT.txt  CMakeLists.txt  CmakeLists.txt  ISSUE_DRAFT.md  LICENSE  PRECOMMIT_CI.md  PROTOBUF_FIX_README.md  TASK.md  TRACY_SETUP.md  build.sh  build_tt_metal.sh  check.py  chunk_kernel.txt  ckernel_stencil.h  clean_generated_protos.sh  codex_changes.txt  collect_code.sh  compare.py  compare_timings.py  cone_lwt_code.txt  context.md  count.py  create_signal.py  current_horizontal_stencil_multicore_halo.md  dtypes.py  fill.py  instruction.md  lifting2.py  log.txt  log1.txt  log2.txt  main.py  (+19 more)
archive/vertical_stencil_test/: CMakeLists.txt  README.md
archive/vertical_stencil_test/tt-wavelet/: stencil.cpp
ci/: CMakeLists.txt
experiments/precision/: CMakeLists.txt  baseline.py  bench.py  benchmark.ipynb  config.toml  dtypes.py  experiment.py  generate.py  requirements.txt  torch-test.py
experiments/precision/include/: Benchmark.hpp  BoundaryHandlers.hpp  Configuration.hpp  Filter.hpp  LiftingScheme.hpp  Signal.hpp  Wavelets.hpp
experiments/precision/src/: Benchmark.cpp  Configuration.cpp  main.cpp
lwt/: CMakeLists.txt  main.cpp
lwt/include/: tt_wavelet_baseline.hpp
lwt/tt-wavelet/: Makefile  cmake_install.cmake
tt-wavelet/: CMakeLists.txt  CmakeLists.txt  compute.cpp  lifting.cpp  lwt_main.cpp  lwt_reader_test.cpp  main.cpp  main_elt.cpp  main_elt_multicore.cpp  main_lwt.cpp  n300s_demo.cpp  stencil.cpp  tracy_demo.cpp
tt-wavelet/ckernels/sfpu/: ckernel_sfpu_stencil.h  ckernel_sfpu_stencil.hpp  ckernel_sfpu_stencil_acc.h  ckernel_sfpu_stencil_acc.hpp  ckernel_sfpu_stencil_affine.h  ckernel_sfpu_stencil_affine.hpp  ckernel_sfpu_stencil_mac.h
tt-wavelet/include/stencil/: policy.hpp
tt-wavelet/include/stencil/api/: acc.hpp  affine.hpp  mac.hpp  stencil.hpp
tt-wavelet/include/stencil/llk/: llk_math_eltwise_stencil_sfpu_params.hpp
tt-wavelet/include/tt_wavelet/: HEADERS.md  wavelet_registry.hpp
tt-wavelet/include/tt_wavelet/wavelets/: bior1_1.hpp  bior1_3.hpp  bior1_5.hpp  bior2_2.hpp  bior2_4.hpp  bior2_6.hpp  bior2_8.hpp  bior3_1.hpp  bior3_3.hpp  bior3_5.hpp  bior3_7.hpp  bior3_9.hpp  bior4_4.hpp  bior5_5.hpp  bior6_8.hpp  coif1.hpp  coif10.hpp  coif11.hpp  coif12.hpp  coif13.hpp  coif14.hpp  coif15.hpp  coif16.hpp  coif17.hpp  coif2.hpp  coif3.hpp  coif4.hpp  coif5.hpp  coif6.hpp  coif7.hpp  coif8.hpp  coif9.hpp  db1.hpp  db10.hpp  db11.hpp  db12.hpp  db13.hpp  db14.hpp  db15.hpp  db16.hpp  (+66 more)
tt-wavelet/kernel/: loopback.cpp
tt-wavelet/kernels/: ckernel.h  compute.cpp  compute_tiles.cpp  compute_tiles_multicore.cpp  lwt_add_compute.cpp  lwt_mul_compute.cpp  lwt_stencil_compute.cpp  reader.cpp  reader_tiles.cpp  reader_tiles_multicore.cpp  stencil_compute.cpp  stencil_compute.h  stencil_sfpi.h  writer.cpp  writer_tiles.cpp  writer_tiles_multicore.cpp
tt-wavelet/kernels/compute/: chunk_lwt_compute.cpp  ckernel_stencil.h  compute.cpp  lwt_compute.cpp  lwt_compute_compiletime_impl.hpp  lwt_compute_utils.hpp  lwt_cone_compute.cpp  lwt_fused_compute_template.hpp  lwt_mul_compute.cpp  lwt_scale_compute.cpp  stencil_compute.cpp
tt-wavelet/kernels/dataflow/: chunk_lwt_reader.cpp  chunk_lwt_writer.cpp  lwt_cone_reader.cpp  lwt_cone_writer.cpp  lwt_fused_reader.cpp  lwt_fused_writer.cpp  lwt_reader.cpp  lwt_reader_utils.hpp  lwt_readers_utils.hpp  lwt_row_major_writer.cpp  lwt_scale_reader.cpp  lwt_scale_tile_reader.cpp  lwt_scale_tile_row_major_writer.cpp  lwt_stencil_step_reader.cpp  lwt_tile_row_major_utils.hpp  lwt_writer.cpp  pad_1d_writer.cpp  pad_split_1d_reader.cpp  pad_split_1d_reader_utils.hpp  pad_split_1d_writer.cpp  pad_split_1d_writer_utils.hpp  pad_symmetric_1d_reader.cpp  read.cpp  stencil_read.cpp  stencil_write.cpp  stencil_writer.cpp  write.cpp
tt-wavelet/kernels/primitives/: blob_common.hpp  indexing.hpp  input_stream.hpp  interleave.hpp  mem_fill.hpp  output_stream.hpp  splice_chain.hpp  split_layout.hpp  stencil_layout.hpp  stick_cache.hpp  stick_writer.hpp  tile_row_major.hpp  workspace_layout.hpp
tt-wavelet/kernels/sfpi/: common.h  horizontal_stencil_sfpi.h  lwt_sfpi_common.h  recovers.h  scale_sfpi.h  shift.h  splice.h  stencil.h  stencil_sfpi.h  vertical_stencil_sfpi.h
tt-wavelet/kernels/test/: splice_ops_compute.cpp  splice_ops_reader.cpp  splice_ops_writer.cpp
tt-wavelet/kernels/utils/: boundary.hpp  fill.hpp  output_stick_writer.hpp  row_major_tile.hpp  stick_read_cache.hpp
tt-wavelet/tests/: scheme_registry_test.cpp  shift_recover_test.cpp
tt-wavelet/tt_wave/sfpu/: ckernel_sfpu_stencil_acc.h  ckernel_sfpu_stencil_affine.h  ckernel_sfpu_stencil_mac.h
tt-wavelet/tt_wave/stencil/: policy.h
tt-wavelet/tt_wave/stencil/api/: stencil_mac.h
tt-wavelet/tt_wave/stencil/llk/: mac.h  params.h
tt-wavelet/tt_wavelet/include/: boundary.hpp  device_step_desc.hpp  lwt_device.hpp  pad_split.hpp  pad_split_device.hpp  padding.hpp  padding_device.hpp  signal.hpp  split.hpp  split_device.hpp  stencil_device.cpp  stencil_device.hpp
tt-wavelet/tt_wavelet/include/common/: boundary.hpp  constants.hpp  padding.hpp  signal.hpp
tt-wavelet/tt_wavelet/include/device_protocol/: lwt_config.hpp  step_desc.hpp
tt-wavelet/tt_wavelet/include/lifting/: cone_plan.hpp  device.hpp  execution_plan.hpp  inverse_plan.hpp  l1_accounting.hpp  lifting_device.hpp  lifting_plan.hpp  lifting_scheme.hpp  lifting_step.hpp  plan.hpp  policy.hpp  scheme.hpp  static_scheme.hpp  step.hpp
tt-wavelet/tt_wavelet/include/pad_split/: device.hpp  layout.hpp
tt-wavelet/tt_wavelet/include/schemes/: .gitignore  scheme.hpp
tt-wavelet/tt_wavelet/include/utils/: args.hpp
tt-wavelet/tt_wavelet/include/wavelet/: coif2.hpp  scheme.hpp
tt-wavelet/tt_wavelet/includes/: padding.hpp  padding_device.hpp  signal.hpp
tt-wavelet/tt_wavelet/src/: lifting_device.cpp  lifting_plan.cpp  lwt_device.cpp  pad_split_device.cpp  padding_device.cpp  split_device.cpp  stencil_device.cpp
tt-wavelet/tt_wavelet/src/lifting/: cone_device.cpp  plan.cpp  (+1 more)
(+282 files in other folders)
